--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "react-dom": "^15.4.2"
   },
   "devDependencies": {
+    "animate.css": "^3.5.2",
+    "font-awesome": "^4.7.0",
     "react-scripts": "0.9.5"
   },
   "scripts": {
